--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
     "react-helmet": "^6.1.0",
     "react-router": "^6.12.1",
     "react-router-dom": "^6.12.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
